fix links readability
 + links color
 + darker background

--- a/output/bootstrap.css
+++ b/output/bootstrap.css
@@ -303,8 +303,8 @@ body {
   font-family: 'Alice', serif;
   font-size: 22px;
   line-height: 1.428571429;
-  color: rgb(221, 221, 221);
-  background-color: rgb(100, 100, 100);
+  color: rgb(190, 190, 190);
+  background-color: #424242;
 }
 
 input,
@@ -324,13 +324,13 @@ textarea {
 }
 
 a {
-  color: #428bca;
+  color: #00b8ff;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #2a6496;
+  color: #00ffff;
   text-decoration: underline;
 }
 
@@ -488,7 +488,7 @@ h1,
 h2,
 h3 {
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 h4,
@@ -642,7 +642,7 @@ abbr.initialism {
 blockquote {
   padding: 10px 20px;
   margin: 0 0 20px;
-  border-left: 5px solid #eeeeee;
+  border-left: 5px solid rgb(190, 190, 190);
 }
 
 blockquote p {
